--- a/style.css
+++ b/style.css
@@ -91,10 +91,10 @@
   }
 
 
-  @media only screen and (max-width: 900px) {
+/*   @media only screen and (max-width: 900px) {
     .nav-container {
         flex-direction: column;
-      }
+      } */
 }
 
 @media only screen and (max-width: 550px) {
