--- a/styles/style.css
+++ b/styles/style.css
@@ -129,9 +129,9 @@ header {
     display: none;
   }
 
-  .main-section {
-    padding-top: 70px;
-  }
+/*   .main-section {
+    padding-top: 40px;
+  } */
 
 }
 
