--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,7 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
+  letter-spacing: 0.5px;
   line-height: 1.5;
   /* background-color: #f0f0f0; */
   margin: 0;
@@ -129,9 +130,9 @@ header {
     display: none;
   }
 
-/*   .main-section {
-    padding-top: 40px;
-  } */
+  .main-section {
+    padding-top: 50px;
+  }
 
 }
 
@@ -210,6 +211,7 @@ a {
   padding: 12px 20px;
   font-size: 14px;
   font-weight: bold;
+  margin: 20px 0px;
   border: 2px solid #e4e4e4;
   background-color: #e4e4e4;
   border-radius: 3px;
@@ -280,80 +282,45 @@ a {
   text-align: right;
 }
 
+/* --------------------------------------------------------- text containers-Section */
 
-/* ------------------------------------------------------------ Start your Learning */
-
-.learn-technologies {
-  /* margin: 50px 0px; */
-  padding: 30px 0px;
-  /* background-color: #ffffff19; */
-}
-
-.learn-technologies h1 {
-  font-size: 32px;
-  font-weight: bolder;
-  color: #000000;
-  padding: 20px 0px;
+.text-content-container-1 {
+  max-width: 1100px;
   text-align: center;
+  background-color: #0058b132;
+  border: 1px solid #0051ff;
+  color: #0051ff;
+  border-radius: 10px;
+  margin: 50px auto;
+  padding: 20px 30px;
 }
 
-.start-your-learning {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+.text-content-container-2 {
+  max-width: 1000px;
+  border-radius: 10px;
+  background-color: #60ffa261;
+  margin: 30px auto;
+  padding: 50px 40px;
 }
 
-.technology-stack {
-  border: 1px solid white;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: 0px 0px 50px 2px #0000001a;
-  background-color: #fff;
-  width: 200px;
+.text-content-container-3 {
+  max-width: 1100px;
+  border-radius: 10px;
+  background-color: #ffffff;
+  margin: 30px auto;
+  padding: 60px 40px;
 }
 
-.technology-stack:hover {
-  box-shadow: 0px 0px 50px 1px #6b46c175;
-
+.text-content-container-3 >ul{
+  background-color: #0069d941;
+  border-radius: 10px;
+  padding: 60px 50px;
 }
 
-.technology-stack-img {
-  height: 220px;
-  padding: 0px 20px;
-  display: flex;
-  align-items: center;
-  margin: auto;
-  /* center the image vertically */
+.text-content-container-3 >ul>li{
+  list-style: circle;
+  margin-bottom: 10px;
 }
-
-.technology-stack img {
-  margin: 0% auto;
-  width: 100%;
-}
-
-.technology-stack a {
-  text-decoration: none;
-  /* margin-top: 20px; */
-  text-align: center;
-  padding: 5px 10px;
-  border: 1px solid black;
-  border-radius: 5px;
-  /* background-color: #0000008e; */
-  color: rgb(0, 0, 0);
-}
-
-.technology-stack a:hover {
-  border: 1px solid #6B46C1;
-  background-color: white;
-  color: #6B46C1;
-}
-
-
 
 
 /* --------------------------------------------------------- Developer-Section */
@@ -448,6 +415,7 @@ footer {
   text-align: center;
   padding: 20px 0;
   border-top: 1px solid #6B46C1;
+  background-color: #ffffff;
 }
 
 .footer-container {
