--- a/styles/elegant-snippet.css
+++ b/styles/elegant-snippet.css
@@ -1,85 +1,75 @@
-/* -------------------------------------------------- */
-
-.btn {
-	background-color: #0069d9;
-	border: none;
-	color: #ffffff;
-	cursor: pointer;
-	padding: 10px 20px;
-	border-radius: 5px;
-}
-
-.btn:hover {
-	background-color: #007bff;
-	color: #ffffff;
-}
 
 
-.code-div {
-    background-color: #111;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-    max-width: 800px;
-    padding: 20px;
-    border-radius: 5px;
-    margin: 10px auto;
-    /* Center-align the code-div */
-}
+/* ------------------------------------------------------------ Start your Learning */
 
-.code-block {
-    padding-bottom: 10px;
-    font-family: monospace;
-    /* we are using a monospaced font for code */
-    font-size: 15px;
-    white-space: pre-wrap;
-    /* Preserve line breaks */
-    overflow-x: auto;
-    /* Add a horizontal scrollbar if needed */
-    color: #fff;
-    /* Text color for code */
-}
-
-/* -------------------webkit for the snippet------------------------------- */
-.code-div ::-webkit-scrollbar {
-    /* width: 10px; */
-    height: 2px;
-}
-
-/* customize the scrollbar*/
-.code-div ::-webkit-scrollbar-thumb {
-    background: #00fff2d2;
-    /* Color of the scrollbar thumb */
-    border-radius: 4px;
-}
-
-.code-div ::-webkit-scrollbar-thumb:hover {
-    background: #00fff261;
-    /* Color of the thumb on hover */
-}
-
-/* -------------------------------------------------- */
-
-.copy-code {
-    display: block;
-    margin-top: 10px;
-    background-color: #002c5895;
-    color: #5b8fff;
-    border: none;
-    padding: 2px 5px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-.copy-code:hover {
-    /* background-color: #0080ff95; */
-    color: #bad0ff;
-}
-
-
-/* media query ------------------------------------------------------- */
-
-@media only screen and (max-width: 800px) {
-   .code-div {
-        margin: 10px auto;
-        /* Center-align the code-div */
-    }
+.learn-technologies {
+    /* margin: 50px 0px; */
+    padding: 30px 0px;
+    /* background-color: #ffffff19; */
   }
+  
+  .learn-technologies h1 {
+    font-size: 32px;
+    font-weight: bolder;
+    color: #000000;
+    padding: 20px 0px;
+    text-align: center;
+  }
+  
+  .start-your-learning {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .technology-stack {
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0px 0px 50px 2px #0000001a;
+    background-color: #fff;
+    width: 200px;
+  }
+  
+  .technology-stack:hover {
+    box-shadow: 0px 0px 50px 1px #6b46c175;
+  
+  }
+  
+  .technology-stack-img {
+    height: 220px;
+    padding: 0px 20px;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    /* center the image vertically */
+  }
+  
+  .technology-stack img {
+    margin: 0% auto;
+    width: 100%;
+  }
+  
+  .technology-stack a {
+    text-decoration: none;
+    /* margin-top: 20px; */
+    text-align: center;
+    padding: 5px 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    /* background-color: #0000008e; */
+    color: rgb(0, 0, 0);
+  }
+  
+  .technology-stack a:hover {
+    border: 1px solid #6B46C1;
+    background-color: white;
+    color: #6B46C1;
+  }
+  
+  
