--- a/personal-portfolio/my-portfolio.css
+++ b/personal-portfolio/my-portfolio.css
@@ -9,7 +9,8 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: white;
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     /* Box shadow properties chhe*/
     z-index: 100;
@@ -33,8 +34,8 @@ body {
 }
 
 #nav-menu-button {
-    background-color: #ffffff;
-    border: 1px solid #12181f;
+    background-color: #ffffff00;
+    border: 1px solid #ffffff;
     color: #000000;
     border-radius: 5px;
     font-size: 20px;
@@ -72,7 +73,7 @@ body {
 /* Style the close button inside the side navigation */
 #nav-close-button {
     background-color: #12181f;
-    border: 1px solid #fff;
+    border: 1px solid #ffffff00;
     color: #ffffff;
     border-radius: 5px;
     font-size: 20px;
